--- a/style.css
+++ b/style.css
@@ -421,17 +421,18 @@ footer {
     margin-top: 40px;
     width: 100%;
     height: 80px;
-    background-color: yellow;
+    background-color: rgb(127, 19, 228);
 }
 
 .footer-item {
     height: 100%;
     width: 80%;
-    background-color: blue;
+    font-size: 20px;
+    /* background-color: blue; */
     margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content:space-evenly;
 }
 
 
-::-webkit-scrollbar {
-    width: 0;
-}
