--- a/style.css
+++ b/style.css
@@ -421,14 +421,14 @@ footer {
     margin-top: 40px;
     width: 100%;
     height: 80px;
-    background-color: rgb(127, 19, 228);
+    /* background-color: rgb(127, 19, 228); */
 }
 
 .footer-item {
     height: 100%;
-    width: 80%;
+    width: 100%;
     font-size: 20px;
-    /* background-color: blue; */
+    background-color: blue;
     margin: auto;
     display: flex;
     align-items: center;
